--- a/Documentation/undoc.html
+++ b/Documentation/undoc.html
@@ -94,7 +94,7 @@
    <h3>AdminCP UI Additions</h3>
    <ul>
     <li><em>Custom Thread Fields</em> section under the Configuration tab - this is where you can add custom thread fields</li>
-	<li><em>XThreads Options</em> section under forum add/edit - this allows you to customise various XThreads options on a per forum basis</li>
+	<li><em>XThreads Options</em> section under forum add/edit - this allows you to customise various XThreads options on a per forum basis; XThreads also adds to the list of sorting options, if you have sortable thread fields assigned to the forum</li>
    </ul>
    <h3>Modified Templates</h3>
    <ul>
