Support for modifying thread fields in custom moderator tools

--- a/Documentation/undoc.html
+++ b/Documentation/undoc.html
@@ -96,6 +96,7 @@
    <ul>
     <li><em>Custom Thread Fields</em> section under the Configuration tab - this is where you can add custom thread fields</li>
 	<li><em>XThreads Options</em> section under forum add/edit - this allows you to customise various XThreads options on a per forum basis; XThreads also adds to the list of sorting options, if you have sortable thread fields assigned to the forum</li>
+	<li><em>Modify Custom Thread Fields</em> textbox under add/edit Moderator Tools - this allows moderator tools to modify custom thread fields</li>
    </ul>
    <h3>Modified Templates</h3>
    <ul>
