--- a/Documentation/undoc.html
+++ b/Documentation/undoc.html
@@ -117,9 +117,10 @@
     <li><em>Custom Thread Fields</em> section under the Configuration tab - this is where you can add custom thread fields</li>
 	<li><em>XThreads Options</em> section under forum add/edit - this allows you to customise various XThreads options on a per forum basis; XThreads also adds to the list of sorting options, if you have sortable thread fields assigned to the forum</li>
 	<li><em>Modify Custom Thread Fields</em> textbox under add/edit Moderator Tools - this allows moderator tools to modify custom thread fields; note that values here are NOT validated and permissions are NOT checked!</li>
-	<li><em>Rebuild <code>threadfields</code> and <code>xt_forums</code> cache</em> under <em>Cache Manager</em> for rebuilding XThreads caches</li>
+	<li><em>Rebuild <code>threadfields</code> cache</em> under <em>Cache Manager</em> for rebuilding XThreads caches</li>
 	<li><em>Rebuild XThreads Attachment Thumbnails</em> under <em>Recount &amp; Rebuild</em> for rebuilding thumbnails associated with uploaded XThreads images (also required if you change thumbnail sizes)</li>
 	<li><em>Prune XThreads Orphaned Attachments</em> task, which periodically cleans up orphaned XThreads attachments (as well as performs deferred MD5 hashing), similar to MyBB's <em>Find Orphaned Attachments</em></li>
+	<li>Folder chmod check under <em>Tools and Maintenance</em>, <em>System Health</em></li>
    </ul>
    <h3>Modified Templates</h3>
    <ul>
