Fix template error for non-existent file threadfields (thanks to jim7777 for finding)

--- a/Documentation/undoc.html
+++ b/Documentation/undoc.html
@@ -120,7 +120,7 @@
 	<li><em>Rebuild <code>threadfields</code> cache</em> under <em>Cache Manager</em> for rebuilding XThreads caches</li>
 	<li><em>Rebuild XThreads Attachment Thumbnails</em> under <em>Recount &amp; Rebuild</em> for rebuilding thumbnails associated with uploaded XThreads images (also required if you change thumbnail sizes)</li>
 	<li><em>Prune XThreads Orphaned Attachments</em> task, which periodically cleans up orphaned XThreads attachments (as well as performs deferred MD5 hashing), similar to MyBB's <em>Find Orphaned Attachments</em></li>
-	<li>Folder chmod check under <em>Tools and Maintenance</em>, <em>System Health</em></li>
+	<li>Folder chmod check under <em>Tools &amp; Maintenance</em>, <em>System Health</em></li>
    </ul>
    <h3>Modified Templates</h3>
    <ul>
