--- a/Documentation/undoc.html
+++ b/Documentation/undoc.html
@@ -157,7 +157,7 @@
     <li><strong>forumdisplay_group_sep</strong> and <strong>forumdisplay_thread_null</strong> - for use with thread grouping (is explained if you enable thread grouping); defaults to nothing</li>
     <li><strong>showthread_noreplies</strong> - displayed in the <code>{$posts}</code> variable for <em>showthread</em> only if the thread has no replies; see the comment in the template for more information</li>
     <li><strong>forumdisplay_searchforum_inline</strong> - inline forum searching - you don't need to bother with this unless you want to...</li>
-    <li><strong>threadfields_inputrow</strong> - how extra fields are displayed in newthread/editpost (of first post) - don't need to worry about this one either</li>
+    <li><strong>post_threadfields_inputrow</strong> - how extra fields are displayed in newthread/editpost (of first post) - don't need to worry about this one either</li>
    </ul>
    <p>Although not an added template, you can create <em>postbit_first*</em> templates to override the various <em>postbit*</em> templates for the first post of a thread.</p>
    
